--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.5.0",
+    "dotenv": "^16.0.3",
     "ethers": "^5.0.0",
     "next": "^12.1.6",
     "react": "^18.1.0",
@@ -19,9 +20,9 @@
   "devDependencies": {
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
+    "autoprefixer": "^10.4.8",
     "eslint": "^8.15.0",
     "eslint-config-next": "^12.1.6",
-    "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.2"
