--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.5.0",
     "dotenv": "^16.0.3",
-    "ethers": "^5.0.0",
+    "ethers": "^5.7.2",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.4.8",
     "eslint": "^8.15.0",
     "eslint-config-next": "^12.1.6",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.2"
