--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.5.0",
+    "axios": "^1.1.3",
     "buffer": "^6.0.3",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
@@ -17,6 +18,7 @@
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-spinners": "^0.13.6",
     "react-type-animation": "^2.1.2",
     "wagmi": "^0.6.0"
   },
@@ -28,7 +30,6 @@
     "eslint-config-next": "^12.1.6",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.16",
-    "react-hook-form": "^7.39.3",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.2"
   }
