--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ipfs-http-client": "^59.0.0",
     "next": "^12.1.6",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.1.0",
     "react-spinners": "^0.13.6",
     "react-type-animation": "^2.1.2",
