--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.5.0",
+    "axios": "^1.1.3",
+    "buffer": "^6.0.3",
     "dotenv": "^16.0.3",
-    "ethers": "^5.0.0",
+    "ethers": "^5.7.2",
+    "ipfs-http-client": "^59.0.0",
     "next": "^12.1.6",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.1.0",
+    "react-spinners": "^0.13.6",
+    "react-type-animation": "^2.1.2",
     "wagmi": "^0.6.0"
   },
   "devDependencies": {
@@ -23,6 +29,7 @@
     "autoprefixer": "^10.4.8",
     "eslint": "^8.15.0",
     "eslint-config-next": "^12.1.6",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.2"
